--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ page-layout: full
 
 <style>
   body {
-  background-image: url("snow_bg.png");
+  background-image: url("snow_bg.png"), url("conk_dark.png");
   background-color: black;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,5 +15,9 @@ page-layout: full
 
 # ㅤ
 # ㅤ
-# <font color="#800080">Snow Valormae</font>
-<button type="About">About</button><button type="Contact">Contact</button>
+<!-- # <font color="#800080">Snow Valormae</font> -->
+# <font color="#CED4EA">Snow Valormae</font>
+<button type="button" onclick="window.location.href='about.html';" class="btn btn-outline-secondary">About</button>
+<button type="button" onclick="window.location.href='contact.html';" class="btn btn-outline-secondary">Contact</button>
+
+
