--- a/about.qmd
+++ b/about.qmd
@@ -15,11 +15,13 @@ fontcolor: "white"
   
 </style>
 # <font color="#FFFFFF">About<br>
-Snow Valormae is an accomplished guitarist and composer hailing from the beautiful city of Christchurch in Aotearoa New Zealand. With a diverse musical background and a passion for pushing boundaries, Snow's artistic journey has been nothing short of extraordinary.
-
-Having graduated from the University of Canterbury, Snow Valormae's musical style is a captivating fusion of various genres, including metal, rock, jazz, and classical. It is this amalgamation of influences that lends her music a truly unique and compelling quality. While Snow possesses the remarkable ability to traverse different musical landscapes, her heart truly lies in composing and performing progressive metal music, as well as arranging jazz compositions.
-
-Currently, Snow Valormae is an integral member of the esteemed All Girls Big Band, lending her exceptional guitar skills to their mesmerizing sound. In addition to her collaborative work, Snow is engaged in two exciting projects behind the scenes. She is diligently working on an instrumental progressive metal project that promises to push the boundaries of the genre, and simultaneously exploring the realms of jazz with her talented jazz trio.
 
 This website serves as a window into her artistic world, providing a glimpse into her musical endeavors, inspirations, and upcoming projects. Stay tuned for updates, sample her captivating compositions, and witness the evolution of an artist dedicated to pushing the boundaries of musical expression.
+
+Snow Valormae is a guitarist and composer based in the picturesque city of Christchurch, Aotearoa New Zealand. With a diverse musical background and a deep passion for exploring different genres, Snow's artistic journey has been a source of incredible inspiration.
+
+Having completed her studies at the University of Canterbury, Snow Valormae's musical style is an intriguing blend of various genres, including metal, rock, jazz, and classical. Drawing from these diverse influences, she brings a unique and personal touch to her music. While Snow is skilled in playing multiple genres, her heart lies in composing and performing progressive metal music, as well as arranging jazz compositions.
+
+Snow Valormae is currently an active member of the All Girls Big Band, contributing her guitar skills to create a harmonious and captivating sound. Additionally, she is working on two exciting projects behind the scenes. One project focuses on instrumental progressive metal, aiming to explore new boundaries within the genre, while the other project involves a jazz trio, where Snow delves into the expressive world of jazz arrangements.
+
 </font>
