Add Spotify embeds to projects page

--- a/projects.qmd
+++ b/projects.qmd
@@ -18,7 +18,7 @@ fontcolor: "#CED4EA"
 </style>
 
 <font color="#CED4EA">
-Projects<br>
-This is an opportunity to showcase your past work.<br>
-Lorem ipsum dolor sit amet!
+Singles<br>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/08ynbFNVDeA2ST1pPRv7Iy?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4MunqwAAseDQMIznA3KHOq?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </font>
