--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ format: html
 
 # About
 
-![](assets/photos/headshot.jpg){style="float: right;" fig-alt="headshot" fig-align="right" width="250"}
+![](assets/photos/headshot.jpg){style="float: right; margin: 15px;" fig-alt="headshot" fig-align="right" width="250"}
 
 Snow Valormae is a guitarist and composer based in the picturesque city of Christchurch, Aotearoa New Zealand. With a deep passion for exploring different genres, her artistic journey has been a source of passion and inspiration.
 
@@ -15,6 +15,7 @@ Having completed her studies at the University of Canterbury, Snow Valormae’s 
 Snow not only composes and performs for her own solo progressive metal project, Valormae, where she delves into the intricate and powerful realms of instrumental music, but she also brings her versatile guitar skills to the Christchurch All Girls Big Band. As a key member of this ensemble, Snow contributes to creating a harmonious and captivating sound that blends traditional jazz elements with modern flair.
 
 Snow is a graduate of the University of Canterbury, holding a Bachelor’s degree in Music, and was awarded the prestigious 2017 Academic Award for the Leigh and Judith Pownall Prizes in Music. Her academic journey was defined by a focus on extended range guitar performance and composition, particularly with the 8-string guitar. Snow embraced a diverse range of performance styles, studying jazz, classical, and contemporary approaches. Her compositional studies were centered on classical compositional philosophy and jazz harmony, which she used as foundational tools to write modern progressive contemporary music, creating a unique and innovative voice in her work.
+
+![](assets/awards/UO2024WinnerButton-1.png){style="float: left; margin-right: 15px" fig-alt="headshot" fig-align="center" width="100"}
  
 Snow has moved on to win the Instrumental category of the Unsigned Only Music Competition with her original composition "Anxious Atrium." This achievement is a testament to her ability to combine technical ability with bold, forward-thinking musical ideas.
-</font>
