--- a/contact.qmd
+++ b/contact.qmd
@@ -27,23 +27,36 @@
 <font color="#CED4EA"> -->
 
 # Contact me
-Thank you for your interest in my music! If you're looking to hire a talented musician for your event or project, I would love to hear from you. Please feel free to get in touch using the contact information below. I am available for live performances, studio recording sessions, collaborations, and other musical endeavors.
 
 <!-- [Email](mailto:snow@fake-email.com)<br>
 [Facebook](https://www.facebook.com/profile.php?id=100089887522806)<br>
 [Instagram](https://www.instagram.com/valormae_music)<br> -->
 
-<button type="button" onclick="window.location.href='mailto:snow@fake-email.com';" class="btn btn-outline-secondary">Email</button>
+Whether you're looking for tutoring, technical services, or creative collaborations, I’d love to hear from you! Feel free to reach out with any inquiries related to the following services:
+
+**• Tutoring**: Private guitar lessons in metal, classical, jazz, blues, rock, and music theory. [See Ts&Cs here.](terms.qmd)
+
+**• Mixing & Mastering**: Audio mixing and mastering services to help your music sound polished and cohesive.
+
+**• Guitar Setups**: Expertise in setting up guitars, including floating bridges, fret leveling, and pickup wiring.
+
+**• Rig Building**: Custom pedalboard setups, soldering, MIDI programming, and power management for quiet and efficient rigs.
+
+**• Composing & Arranging**: Composition of prog metal instrumentals and arranging complex jazz charts.
+
+**• Performing**: Solo and collaborative performances for a wide range of musical genres.
+
+For any inquiries, contact me with the links below or email me at snowvalormae@gmail.com.
+
+<button type="button" onclick="window.location.href='mailto:snowvalormae@gmail.com';" class="btn btn-outline-secondary">Email</button>
 <button type="button" onclick="window.location.href='https://www.facebook.com/profile.php?id=100089887522806';" class="btn btn-outline-secondary">Facebook</button>
 <button type="button" onclick="window.location.href='https://www.instagram.com/valormae_music';" class="btn btn-outline-secondary">Instagram</button>
+
 <br>
 
-
-Please include some details about your event or project, such as the date, location, and any specific requirements you may have. This will help me understand your needs better and provide you with a tailored response.
-
-Additionally, I am open to discussing any ideas or special requests you may have. Whether you're organizing a wedding, corporate function, private party, or any other occasion that calls for live music, I am committed to creating a memorable experience for you and your guests.
-
+#### Response Time
 I strive to respond to all inquiries promptly, typically within 24-48 hours. However, please note that during busy periods, it may take a little longer for me to get back to you. Rest assured, your message is important to me, and I will make every effort to get in touch with you as soon as possible.
+
 <!-- </font> -->
 
 <!-- :::
