--- a/expertise.qmd
+++ b/expertise.qmd
@@ -1,12 +1,11 @@
-# Guitar & Theory Tutoring
 <style>
 .container {
 	z-index: 1;
 	/* background: white; */
-	padding: 2em;
+	padding: 1em;
 }
 blockquote {
-	padding: 2em 1.5em 2em 2em;
+	padding: 1em 1.5em 1em 2em;
 	position: relative;
 	color: #999;
 }
@@ -49,12 +48,14 @@ blockquote cite:before {
 }
 </style>
 
+# Guitar & Theory Tutoring
+
 <div>
-![](assets/photos/teaching.jpg){style="float: right;" fig-alt="teaching" fig-align="left" width="500"}
-<!-- ![](assets/photos/headshot.jpg){style="float: right;" fig-alt="headshot" fig-align="right" width="250"} -->
+![](assets/photos/teaching.jpg){style="float: right; margin: 15px;" fig-alt="teaching" fig-align="right" width="500"}
 
 Snow offers private guitar tutoring with a focus on a diverse range of genres, including metal, jazz, classical, blues, prog and rock. Whether students are beginners or looking to refine their skills, Snow provides personalized lessons tailored to their interests, covering everything from technique, improvisation, music theory and notation reading. 
 </div>
+<br>
 <br>
 <br>
 
@@ -73,27 +74,43 @@ Snow offers private guitar tutoring with a focus on a diverse range of genres, i
 
 # Composing and Arranging
 
-![](assets/photos/composition.jpg){style="float: right;" fig-alt="rig-building" fig-align="left" width="500"}
+![](assets/photos/composition.jpg){style="float: left; margin: 15px;" fig-alt="rig-building" fig-align="left" width="425"}
 
 Snow composes intricate prog metal instrumentals for her solo project ‘Valormae’ and arranges complex jazz charts, blending technical virtuosity with creative expression. Her work spans dynamic compositions and detailed arrangements, showcasing a deep understanding of both genres. She has recently won an honorary mention award for her song ‘Anxious Atrium’ in the Instrumental section of the Unsigned Only song writing competition.
+<br>
+<br>
 
 # Rig building (Pedalboards)
 
-<div>
-![](assets/photos/rig-building.jpg){style="float: right;" fig-alt="rig-building" fig-align="left" width="500"}
+![](assets/photos/rig-building.jpg){style="float: right; margin: 15px;" fig-alt="rig-building" fig-align="left" width="500"}
 
 Snow's experience as a rig builder for guitar pedalboards includes expertise in soldering, MIDI programming, and understanding signal paths. Her setups are known for being quiet, power-managed, and seamlessly integrated to ensure reliable performance.
-</div>
 
 <br>
 <br>
 <br>
+<br>
+<br>
+
+# Mixing & Mastering
+
+![](assets/photos/mixing.jpg){style="float: left; margin: 15px;" fig-alt="guitar" fig-align="left" width="500"}
+
+Snow approaches mixing and mastering with attention to detail and a focus on clarity and balance. She works to bring out the natural character of each track while ensuring the final product is cohesive and polished. Snow's process is straightforward and thoughtful, always prioritizing the music's intent without overcomplicating the workflow. 
+
 <br>
 <br>
 
 # Guitar Setups
 
+![](assets/photos/guitar.jpg){style="float: right; margin: 15px;" fig-alt="guitar" fig-align="left" width="500"}
+
 Snow Valormae is an experienced guitar tech, specializing in guitar setups with floating bridges and traditional guitars. She is skilled in fret leveling and wiring pickups, ensuring that each instrument is perfectly tailored for peak performance and playability. 
+
+<br>
+<br>
+<br>
+<br>
 
 <div class="container">
   <blockquote>
