--- a/gallery.qmd
+++ b/gallery.qmd
@@ -3,31 +3,17 @@ page-layout: custom
 ---
 
 <style>
-.strokeme {
+.stroke {
   /* color: white; */
   /* background-color: white; */
-  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
-  /* webkit-text-fill-color: transparent;
-  webkit-text-stroke: 1px; */
   text-shadow: #000 0px 0px 10px;
   -webkit-font-smoothing: antialiased;
 }
-/* h1 {
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 1px;
-} */
 </style>
 
-<div class="strokeme">
-# <font color="#000000">Gallery</font>
-</div>
+# Gallery
+
 <br>
-
-<style>
-  div {
-    text-align: center;
-  }
-</style>
 
 ::: {.grid}
 
